[project]
name = "Differentially Private Deep Learning"
version = "0.0.1"
description = "Learning by following a tutorial"
authors = [{ name = "Caroline Mimeault", email = "carolinemimeault@gmail.com" }]
dependencies = []
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
